5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1885_3177.log
== TEST (2019-07-09 10:56:09) 
-- CODE:
from numpy import*
def vogais():
	i = 0
	j = 0
x = str(input("Digite a vogal:"))
for i in x:
	if i.lower() in x:
		j = j + 1
print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:56:31) 
-- CODE:
from numpy import*
def vogais():
	i = 0
	j = 0
x = str(input("Digite a vogal:"))
for i in x:
	if i.lower() in x:
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:57:24) 
-- CODE:
from numpy import*
def vogais():
	i = 0
	j = 0
x = str(input("Digite a vogal:"))
for i in x:
	if i.lower() in x:
		i = i + 1
print(i)
vogais()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:57:50) 
-- CODE:
from numpy import*
def vogais():
	i = 0
	j = 0
x = str(input("Digite a vogal:"))
for i in x:
	if i.lower() in x:
		j = j + 1
print(j)
vogais()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:04:59) 
-- CODE:
def vogais():
	i = 0
	j = 0
x = str(input("Digite a palavra:"))
for i in x:
	if((i == "a") or (i=="e") or (i == "i") or (i == "o") or (i == "u")):
		j = j + 1
print(j)
vogais()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    j = j + 1
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:05:15) 
-- CODE:
def vogais():
	i = 0
	j = 0
x = str(input("Digite a palavra:"))
for i in x:
	if((i == "a") or (i=="e") or (i == "i") or (i == "o") or (i == "u")):
	j = j + 1
print(j)
vogais()
-- ERROR:
File "XXXX", line 7
    j = j + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:09:37) 
-- CODE:
def vogais():
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if((i == "a") or (i == "e") or (i == "i") or (i == "o") or (i == "u")):
			j+ = 1
	print(j)
vogais()
		
-- ERROR:
File "XXXX", line 8
    j+ = 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:03) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if((i == "a") or (i == "e") or (i == "i") or (i == "o") or (i == "u")):
			j = j+1
	print(j)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:11) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if((i == "a") or (i == "e") or (i == "i") or (i == "o") or (i == "u")):
			j = j+1
	print(j)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:10:16) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if((i == "a") or (i == "e") or (i == "i") or (i == "o") or (i == "u")):
			j = j+1
	print(j)
vogais()
		
-- EXECUTION TIME:
0.885298
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
5
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
4
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:54) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if((i == "a") or (i == "e") or (i == "i") or (i == "o") or (i == "u")):
			j = j+1
	print(j)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:58) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if((i == "a") or (i == "e") or (i == "i") or (i == "o") or (i == "u")):
			j = j+1
	print(j)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:06) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if((i == "a") or (i == "e") or (i == "i") or (i == "o") or (i == "u")):
			j = j+1
	print(j)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:01) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if((i == "a"):
			j = j+1
	print(j)
vogais()
		
-- ERROR:
File "XXXX", line 9
    if((i == "a"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:14) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if(i == "a"):
			j = j+1
	print(j)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:41) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if(i == "a"):
			j = j+1
		elif(i == "e"):
			j = j + 1
	print(j)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:48) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	k = 0
	
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if(i == "a"):
			j = j+1
		elif(i == "e"):
			k= k+ 1
	print(j,k)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:09) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	k = 0
	
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if(i == "a"):
			j = j+1
		elif(i == "e"):
			k= k+ 1
	print(j)
	print(k)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:17:44) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	k = 0
	l = 0
	n = 0
	y = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if(i == "a"):
			j = j+1
		elif(i == "e"):
			k= k+ 1
		elif(i == "i"):
			l = l + 1
		elif(i == "o"):
			n = n + 1
		elif(i == "u"):
			y = y + 1
	print("a:", j)
	print("e:", k)
	print("i:", l)
	print("o:", n)
	print("u:", y)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:17:47) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	k = 0
	l = 0
	n = 0
	y = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if(i == "a"):
			j = j+1
		elif(i == "e"):
			k= k+ 1
		elif(i == "i"):
			l = l + 1
		elif(i == "o"):
			n = n + 1
		elif(i == "u"):
			y = y + 1
	print("a:", j)
	print("e:", k)
	print("i:", l)
	print("o:", n)
	print("u:", y)
vogais()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:18:03) 
-- CODE:
from numpy import*
def vogais():
	
	i = 0
	j = 0
	k = 0
	l = 0
	n = 0
	y = 0
	x = str(input("Palavra:"))
	x = x.lower()
	for i in x:
		if(i == "a"):
			j = j+1
		elif(i == "e"):
			k= k+ 1
		elif(i == "i"):
			l = l + 1
		elif(i == "o"):
			n = n + 1
		elif(i == "u"):
			y = y + 1
	print("a:", j)
	print("e:", k)
	print("i:", l)
	print("o:", n)
	print("u:", y)
vogais()
		
-- EXECUTION TIME:
0.929445
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a: 1
e: 1
i: 1
o: 1
u: 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a: 2
e: 1
i: 1
o: 0
u: 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a: 1
e: 0
i: 0
o: 3
u: 0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
